Modificando los permisos del usuario que gestiona la DB de Influxdb

--- a/roles/influxdb/tasks/main.yaml
+++ b/roles/influxdb/tasks/main.yaml
@@ -61,7 +61,7 @@
     state: present
     grants:
       - database: "{{ influxdb_db }}"
-        privilege: 'WRITE'
+        privilege: 'ALL'
 
 - name: Configurando la funcionalidad de InfluxDB en Icinga2
   replace:
