--- a/roles/grafana/tasks/main.yaml
+++ b/roles/grafana/tasks/main.yaml
@@ -110,8 +110,8 @@
     regexp: "{{ item.key }}"
     replace: "{{ item.value }}"
   with_items:
-    - { key: '^;?admin_user =.*', value: "admin_user = {{ grafana_admin_password }}" }
-    - { key: '^;?admin_user =.*', value: "admin_password = {{ grafana_admin_password }}" }
+    - { key: '^;?admin_user =.*', value: "admin_user = {{ grafana_admin }}" }
+    - { key: '^;?admin_password =.*', value: "admin_password = {{ grafana_admin_password }}" }
   no_log: true
   notify: grafana restart
 
